contractModal design fix(className overlap with register)

--- a/src/components/contractModal/ContractModal.css
+++ b/src/components/contractModal/ContractModal.css
@@ -1,4 +1,4 @@
-.modal {
+.contractModal {
   display: none;
   position: fixed;
   top: 0;
@@ -9,12 +9,12 @@
   background-color: rgba(0, 0, 0, 0.6);
   text-align: center;
 }
-.modal button {
+.contractModal button {
   outline: none;
   cursor: pointer;
   border: 0;
 }
-.modal > section {
+.contractModal > section {
   /* max-width: 700px; */
   height: 90%;
   margin: 0 auto;
@@ -24,13 +24,13 @@
   animation: modal-show 0.3s;
   overflow: scroll;
 }
-.modal > section > header {
+.contractModal > section > header {
   position: relative;
   padding: 16px 64px 16px 16px;
   background-color: #f1f1f1;
   font-weight: 700;
 }
-.modal > section > header button {
+.contractModal > section > header button {
   position: absolute;
   top: 15px;
   right: 15px;
@@ -41,23 +41,23 @@
   color: #999;
   background-color: transparent;
 }
-.modal > section > main {
+.contractModal > section > main {
   padding: 16px;
   border-bottom: 1px solid #dee2e6;
   border-top: 1px solid #dee2e6;
 }
-.modal > section > footer {
+.contractModal > section > footer {
   padding: 12px 16px;
   text-align: right;
 }
-.modal > section > footer button {
+.contractModal > section > footer button {
   padding: 6px 12px;
   color: #fff;
   background-color: #6c757d;
   border-radius: 5px;
   font-size: 13px;
 }
-.modal.openModal {
+.contractModal.openModal {
   display: flex;
   align-items: center;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
